# graphiti

./: IMPLEMENTATION_GUIDE.md  PLAN.md  docker-compose.yml  test_servers.py
examples/ai_agent_memory/: README.md  langgraph_memory_agent.py  memory_client.py  setup.py
mcp_server/: Dockerfile  TESTING_SUMMARY.md  docker-compose.yml  graphiti_mcp_server.py  memory_enhanced_server.py  memory_entity_types.py  pyproject.toml  server_wrapper.py
mcp_server/tests/: README.md  __init__.py  conftest.py  pytest.ini  run_tests.py  test_e2e_mcp.py  test_integration.py  test_memory_enhanced_server.py  test_memory_entity_types.py  validate_setup.py
